<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/login"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="16dp"
  tools:context=".LoginActivity">

  <ImageView
    android:id="@+id/imageViewHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:src="@drawable/login3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <TextView
    android:id="@+id/textViewTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="TODOS A LA PIZZA"
    android:textSize="26sp"
    android:textStyle="bold"
    android:layout_marginTop="30dp"
    android:layout_marginRight="20dp"
    android:textColor="@color/white"
    app:layout_constraintTop_toTopOf="@+id/imageViewHeader"
    app:layout_constraintEnd_toEndOf="parent"/>

  <ImageView
    android:id="@+id/imageViewFooter"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:src="@drawable/header"
    android:layout_marginBottom="-125dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/cardView"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="250dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="18dp"
    android:outlineAmbientShadowColor="@color/red"
    android:outlineSpotShadowColor="@color/red"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="@id/imageViewHeader"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintVertical_bias="0.5">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:backgroundTint="@color/red"
      android:outlineSpotShadowColor="@color/red"
      android:padding="16dp">

      <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:textSize="20dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint" />

      <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextEmail"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:backgroundTintMode="screen"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

      <Button
        android:id="@+id/btnLogin"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/btn_next"
        android:textSize="20dp"
        android:text="@string/login_button" />

      <Button
        android:id="@+id/btnRegister"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginStart="180dp"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:backgroundTint="@color/red"
        android:text="@string/register_button" />

    </RelativeLayout>
  </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>